--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,6 @@ spring:
       port: 27017
       host: localhost
       auto-index-creation: false
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
